WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153941
[GTK] visible-control-characters tests should not be passing
https://bugs.webkit.org/show_bug.cgi?id=153941
Summary
[GTK] visible-control-characters tests should not be passing
Michael Catanzaro
Reported
2016-02-06 08:55:09 PST
The following tests are sometimes passing for the last couple of months: fast/text/control-characters/visible-control-characters-1.html fast/text/control-characters/visible-control-characters-2.html fast/text/control-characters/visible-control-characters-2.xhtml fast/text/control-characters/visible-control-characters-3.html fast/text/control-characters/visible-control-characters-3.xhtml It's bad because these are expected mismatch tests, they should never pass. The first pass (known bad commit) is
r192730
, but that commit is probably not to blame. Then there are many flaky runs. Then
r192779
is the last known bad commit, and then test consistently fails (good) for a while, so it was fixed for a range of commits. The next known pass (bad) is
r193641
, and it's flaky from then on. So we know: * Tests broken shortly before
r192730
, probably exclusive * Tests fixed shortly after
r192779
, exclusive * Tests broken again sometimes before
r193642
, exclusive Unfortunately there was some problem with the bot, and the last results we have before
r193641
are for
r193617
, which is a rather big range of commits. Since the tests were broken, fixed, then broken again, I at first suspected
r192727
, shortly before
r192730
. However that was rolled out quickly in
r192731
, but the tests continued to pass (bad) for some time after that, which doesn't match up. Still, it seems quite possible I broke it with theme changes. (visible-control-characters-1 seems to have a few additional rare, flaky failures outside of those ranges.)
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2016-02-06 09:02:26 PST
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r196216%20(13627)/results.html
Vitaly Dyackhov
Comment 2
2023-02-17 08:54:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10284
EWS
Comment 3
2023-03-10 02:13:33 PST
Committed
261493@main
(4ae8edc354b7): <
https://commits.webkit.org/261493@main
> Reviewed commits have been landed. Closing PR #10284 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug