Render control characters when taking complex text code path https://bugs.webkit.org/show_bug.cgi?id=153941

Reviewed by Carlos Garcia Campos.

The spec says: "Control characters (Unicode category Cc)—other than
tabs (U+0009), line feeds (U+000A), carriage returns (U+000D) and
sequences that form a segment break—must be rendered as a visible glyph"

When taking simple text code path, glyphs of these characters are replaced
with `.notdef` glyph. Let's do the same for complex text path as well.

* LayoutTests/platform/gtk/TestExpectations:
* Source/WebCore/platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):

Canonical link: https://commits.webkit.org/261493@main